<resources>
    <string name="app_name">SurveyRotation</string>
    <string name="survey_question_text">Do you like pineapple on pizza?</string>
    <string name="yes_button_text">Yes</string>
    <string name="no_button_text">No</string>
    <string name="reset_button_text">Reset</string>
    <string name="continue_survey_button_text">Continue Survey</string>
    <string name="yes_survey_results_placeholder">Yes results will be shown here</string>
    <string name="no_survey_results_placeholder">No results will be shown here</string>
    <string name="results_button_text">Results</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>